--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Lab
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1zBHnTzdDXKZ7Bzulf9F2eLQxyZ1W1HxDsZ1O1cugnI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=labsystem
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=fonriveniit@gmail.com
+MAIL_PASSWORD=bgnjngmksplawdph
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="fonriveniit@gmail.com"
+MAIL_FROM_NAME="Fonriven"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
